# similitude

./: README.md  setup.cfg
src/: cli.py  comparison.py  comparison_engine.py  connectors.py  models.py  table.py
src/similitude/: compare.py  comparison.py  connectors.py  format.py  models.py  parse.py  spinner.py  sql_templates.py
