[metadata]
name = similitude
version = 1.0.0
author = Lukas Hennicks
author_email = hennicks.lukas@gmail.com
url = https://github.com/lukas-hen/similitude

[options]
python_requires = >=3.10
packages = find:
install_requires = 
    click==8.1.3
    google-cloud-bigquery==3.3.5

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    similitude = src.cli:cli